--- a/inpainting.ipynb
+++ b/inpainting.ipynb
@@ -59,16 +59,16 @@
    "outputs": [],
    "source": [
     "## Fig 6\n",
-    "# img_path  = 'data/inpainting/vase.png'\n",
-    "# mask_path = 'data/inpainting/vase_mask.png'\n",
+    "img_path  = 'data/inpainting/vase.png'\n",
+    "mask_path = 'data/inpainting/vase_mask.png'\n",
     "\n",
     "## Fig 8\n",
     "# img_path  = 'data/inpainting/library.png'\n",
     "# mask_path = 'data/inpainting/library_mask.png'\n",
     "\n",
     "## Fig 7 (top)\n",
-    "img_path  = 'data/inpainting/kate.png'\n",
-    "mask_path = 'data/inpainting/kate_mask.png'\n",
+    "# img_path  = 'data/inpainting/kate.png'\n",
+    "# mask_path = 'data/inpainting/kate_mask.png'\n",
     "\n",
     "# Another text inpainting example\n",
     "# img_path  = 'data/inpainting/peppers.png'\n",
@@ -91,7 +91,9 @@
    "outputs": [],
    "source": [
     "img_pil, img_np = get_image(img_path, imsize)\n",
-    "img_mask_pil, img_mask_np = get_image(mask_path, imsize)"
+    "img_mask_pil, img_mask_np = get_image(mask_path, imsize)\n",
+    "\n",
+    "print(np.shape(img_np))"
    ]
   },
   {
@@ -289,10 +291,11 @@
     "    net_input = net_input_saved\n",
     "    if reg_noise_std > 0:\n",
     "        net_input = net_input_saved + (noise.normal_() * reg_noise_std)\n",
-    "        \n",
+    "    \n",
+    "    net_input_np = torch_to_np(net_input)\n",
     "        \n",
     "    out = net(net_input)\n",
-    "   \n",
+    "    print(out.shape)\n",
     "    total_loss = mse(out * mask_var, img_var * mask_var)\n",
     "    total_loss.backward()\n",
     "        \n",
@@ -302,7 +305,7 @@
     "        plot_image_grid([np.clip(out_np, 0, 1)], factor=figsize, nrow=1)\n",
     "        \n",
     "    i += 1\n",
-    "\n",
+    "    print(i)\n",
     "    return total_loss\n",
     "\n",
     "net_input_saved = net_input.detach().clone()\n",
@@ -325,7 +328,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -339,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
